--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Đây là trang chính</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam facere incidunt error totam iure reprehenderit provident sapiente tempore voluptate ipsam sed, quaerat commodi magni, suscipit, odio unde ab repellat molestias.</p>
 </body>
 </html>
